# codesys-bridge

./: .gitignore  IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  codesys_script_install.py  git_support.py  mese_install.py  pyproject.toml
assets/: config.json
pngs/: convert_icon.py
src/: convert_icon.py  export.py  load.py  original_export.py  st_types.csv
src/codesys_bridge/: codesys_bridge_script.py  codesys_script_install.py  cs_export.py  cs_import.py  export.py  export_sync.py  fb_parser.py  input_output.py  load.py  new_parser.py  st_parser.py  temp.py  test_new_parser.py  test_st_parser.py  test_tree_parser.py
src/cs_install/: codesys_script_install.py
