[project]
name = "codesys-export"
version = "0.1.0"
description = "Export CodeSys and SE Machine Expert projects to text representation"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.9.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
codesys-export = "codesys_text:main"
