[project]
name = "codesys-bridge"
version = "0.1.0"
description = "Bridge utility for CodeSys and SE Machine Expert projects - text export and transformation, version control tools"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.9.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
codesys-bridge = "codesys_script_install:main"
